force-app/main/default/objects/Product2/fields/Height__c.field-meta.xml
    <fields>
        <fullName>Height__c</fullName>
        <description>Height in centimeters</description>
        <label>Height</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>