force-app/main/default/objects/Product2/fields/Length__c.field-meta.xml
<CustomField>
        <fullName>Length__c</fullName>
        <description>Length in centimeters</description>
        <label>Length</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
</CustomField>