force-app/main/default/objects/Product2/fields/Width__c.field-meta.xml
    <fields>
        <fullName>Width__c</fullName>
        <description>Widths in centimeters</description>
        <label>Width</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>